<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/menu_map" />
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
    </group>
    <group >
        <item
                android:id="@+id/nav_setup"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_setup" />
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_logout" />
    </group>

</menu>
