<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.quickjob.Fragments.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.example.quickjob.Fragments.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery" />

    <fragment
            android:id="@+id/nav_map"
            android:name="com.example.quickjob.Fragments.ui.map.MapFragment"
            android:label="@string/menu_map" />

    <fragment
            android:id="@+id/nav_tools"
            android:name="com.example.quickjob.Fragments.ui.tools.ToolsFragment"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />

    <fragment
            android:id="@+id/nav_share"
            android:name="com.example.quickjob.Fragments.ui.share.ShareFragment"
            android:label="@string/menu_share"
            tools:layout="@layout/fragment_share" />
    <fragment
            android:id="@+id/nav_setup"
            android:name="com.example.quickjob.Fragments.SetupFragment"
            android:label="Setup"
            tools:layout="@layout/fragment_setup" />

</navigation>