<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.EditActivities.EditPaymentActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/change_payment_toolbar"
            android:layout_width="0dp"
            app:title="@string/activity_edit_payment_toolbar"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/leku_white"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/hint_payment_method"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_payment_toolbar" />


    <RadioGroup
            android:id="@+id/change_payment_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/new_ad_btn_money"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

    <RadioButton
            android:id="@+id/change_payment_btn_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:checked="false"
            android:clickable="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_btn_money" />

    <RadioButton
            android:id="@+id/change_payment_btn_sthelse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:buttonTint="@color/colorPrimary"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_btn_sth_else" />
    </RadioGroup>

    <ImageView
            android:id="@+id/change_payment_img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_attach_money_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_payment_radiogroup" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_payment_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/change_payment_img"
            app:layout_constraintTop_toBottomOf="@+id/change_payment_radiogroup">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/change_payment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_payment" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>