<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginActivity"
        android:background="@drawable/gradient_style">


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@string/log_in_btn"
            android:background="#ffffff"
            android:textColor="@color/gradient_start_color"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/login_btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:spinning_bar_color="@color/colorPrimary"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp"/>

    <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp" app:srcCompat="@drawable/ic_lock_outline_white_24dp"
            android:id="@+id/login_lock_img2"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/login_img_email"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_password_new_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/login_password_hint"
            android:textColorHint="@color/white_transparent"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_lock_img2"
            app:layout_constraintTop_toBottomOf="@+id/login_email_field"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white_transparent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/change_password_new_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white_transparent"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white_transparent" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp" app:srcCompat="@drawable/ic_email_white_24dp"
            android:id="@+id/login_img_email"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:hint="@string/sign_in_email_hint"
            android:textColorHint="@color/white_transparent"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_img_email"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white_transparent"
                android:imeOptions="actionDone|actionGo|actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white_transparent" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="@android:color/white"
            android:textStyle="bold" android:textSize="36sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="128dp"
            app:layout_constraintTop_toTopOf="parent" android:fontFamily="serif-monospace"/>

    <Button
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_outline_style"
            android:padding="16dp"
            android:text="@string/create_new_account_btn"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/login_btn_forgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/login_btn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_outline_style"
            android:padding="16dp"
            android:text="@string/forgot_password_btn"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/login_btn_skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/login_btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_outline_style"
            android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="#ffffff"
            android:padding="16dp"
            android:text="@string/no_thanks_btn"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>